--- a/RailLinkWB/RailLink/demo/src/main/resources/application.properties
+++ b/RailLinkWB/RailLink/demo/src/main/resources/application.properties
@@ -11,3 +11,18 @@ spring.thymeleaf.cache=false
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
+
+# N8n Email Automation Configuration
+# Set this to your n8n webhook URL (e.g., https://your-n8n-instance.com/webhook/booking-confirmation)
+n8n.webhook.url=https://jayashan.app.n8n.cloud/webhook-test/booking-confirmation
+# Enable/disable n8n email notifications (default: true)
+n8n.enabled=true
+
+# N8n Chat Automation Configuration
+n8n.chatbot.enabled=true
+# Replace with the webhook URL exposed by your n8n chat agent workflow
+# n8n.chatbot.url=https://jayashan.app.n8n.cloud/webhook-test/69933a06-a6ed-491f-b041-c54619a20cd4
+n8n.chatbot.url=https://jayashan.app.n8n.cloud/webhook-test/69933a06-a6ed-491f-b041-c54619a20cd4
+# Optional: API key header that n8n validates before accepting chat requests
+n8n.chatbot.api-key=raillink-chat-secret-123
+n8n.chatbot.offline-message=Our RailLink assistant is offline right now. Please try again shortly.
