--- a/RailLinkWB/RailLink/demo/src/main/resources/application-mysql.properties
+++ b/RailLinkWB/RailLink/demo/src/main/resources/application-mysql.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/raillink?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/RailLink?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -11,8 +11,15 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 spring.thymeleaf.cache=false
 
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.enabled=true   
+spring.servlet.multipart.max-file-size=20MB 
 spring.servlet.multipart.max-request-size=20MB
+
+# N8n Chat Automation (overrides default profile when needed)
+n8n.chatbot.enabled=true
+# n8n.chatbot.url=https://jayashan.app.n8n.cloud/webhook-test/69933a06-a6ed-491f-b041-c54619a20cd4
+n8n.chatbot.url=https://jayashan.app.n8n.cloud/webhook-test/69933a06-a6ed-491f-b041-c54619a20cd4
+n8n.chatbot.api-key=raillink-chat-secret-123
+n8n.chatbot.offline-message=Our RailLink assistant is offline right now. Please try again shortly.
 
 
